--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
-    "next": "13.5.4",
-    "react": "^18",
-    "react-countup": "^6.4.2",
-    "react-dom": "^18",
-    "react-icons": "^4.11.0",
+    "framer-motion": "^10.18.0",
+    "negotiator": "^0.6.3",
+    "next": "14.2.3",
+    "react": "^18.2.0",
+    "react-countup": "^6.5.3",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-intl": "^6.6.5",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
+    "@types/negotiator": "^0.6.3",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
