--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^10.18.0",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
+    "next-i18n-router": "^5.4.2",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
