--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl": "^2.10.1",
     "framer-motion": "^10.18.0",
-    "negotiator": "^0.6.3",
     "next": "14.2.3",
-    "next-i18n-router": "^5.4.2",
+    "next-intl": "^3.12.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-intl": "^6.6.5",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
-    "@types/negotiator": "^0.6.3",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
